# libnativegui

./: .gitignore  CMakeLists.txt  Makefile  README.md  cobject3d.h  draw2dgraph.c  draw3dgraph.c  gw_internal.h  koord2d.c  koord3d.h  menu.h  mydraw_2d.h  mygraph.c  x11_compat.h
.githooks/: prepare-commit-msg
include/: antialiasing.h  basicdef.h  graph.h  gw.h  koord2d.h  mydraw.h  mygraph.h
src/: antialiasing.c  graph.c  gw_draw.c  gw_win32.c  gw_x11.c  menu.c  mydraw_2d.c  neuzeichnen.c  ufield.c
